add userAgent to detect mouse event, add content in nuxt insight projects blog

--- a/content/projects/3.nuxt-insight.md
+++ b/content/projects/3.nuxt-insight.md
@@ -9,7 +9,11 @@ description: "meta description of the page"
 
 > This Project Still Under Development
 
-<iframe width="100%" style="aspect-ratio: 16/9;"src="https://www.youtube.com/embed/21Lji7_nyGI?si=7KEM-2CglzOhqHOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+## Demo
+
+<iframe width="100%" style="aspect-ratio: 16/9; padding-bottom: 40px"src="https://www.youtube.com/embed/21Lji7_nyGI?si=7KEM-2CglzOhqHOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+## About this project
 
 This project is all about building a feature-rich e-learning application that not only delivers high-quality educational content but also tackles the complexities of safeguarding this content to prevent unauthorized access. The focus here is on implementing robust protection measures to ensure that valuable educational resources are accessible only to authorized users.
 
@@ -29,6 +33,8 @@ export default defineNuxtRouteMiddleware((to, from) => {
   return navigateTo(`/login?redirectTo=${to.path}`);
 });
 ```
+
+## Code
 
 ```javascript
 > pages/course/[...slug].vue
