add description on markdown and add card component in markdown

--- a/content/projects/1.blissful-beginnings.md
+++ b/content/projects/1.blissful-beginnings.md
@@ -1,11 +1,11 @@
 ---
 title: "Blissful Beginnings"
-description: "meta description of the page"
+description: "My final project for undergraduate"
 ---
 
-# C Loyal - Loyalty Point Agent Web App
+# Blissful Beginnings - Atomic Customization Wedding Planner
 
-[Source Code](https://github.com/drigoalexander/Drigo)
+<Card link="https://github.com">Source Code </Card>
 
 > This Project Has Taken Down Due to Domain And Server Expired
 
