--- a/content/projects/2.c-loyal.md
+++ b/content/projects/2.c-loyal.md
@@ -5,7 +5,9 @@ description: "meta description of the page"
 
 # C Loyal - Loyalty Point Agent Web App
 
-[Source Code](https://github.com/drigoalexander/frontend) | [Reference](https://www.linkedin.com/posts/drigo-alexander-9a36a01a8_frontend-nuxt-vue-activity-6956797006224789504-Gql3?utm_source=share&utm_medium=member_desktop)
+<Card link="https://github.com/drigoalexander/frontend">Source Code </Card>
+
+<Card link="https://www.linkedin.com/posts/drigo-alexander-9a36a01a8_frontend-nuxt-vue-activity-6956797006224789504-Gql3?utm_source=share&utm_medium=member_desktop">Reference </Card>
 
 > This Project Has Taken Down Due to Domain Expired
 
