--- a/content/projects/3.nuxt-insight.md
+++ b/content/projects/3.nuxt-insight.md
@@ -1,11 +1,13 @@
 ---
 title: "Nuxt Course Project"
-description: "meta description of the page"
+description: "My Personal Project Making E-Learning App"
 ---
 
 # Nuxt Insight - Web App with Nuxt.js for E-Learning
 
-[Source Code](https://github.com/drigoalexander/nuxt-course) | [Live Demo](https://nuxt-insight.vercel.app/)
+<Card link="https://github.com/drigoalexander/nuxt-course-private">Source Code </Card>
+
+<Card link="https://nuxt-course.private.vercel.app/">Live Demo </Card>
 
 > This Project Still Under Development
 
