--- a/content/projects/4.surabaya-mun.md
+++ b/content/projects/4.surabaya-mun.md
@@ -1,11 +1,13 @@
 ---
 title: "Surabaya MUN"
-description: "meta description of the page"
+description: "My Very first app for event registration"
 ---
 
 # Surabaya MUN - My Very First Project
 
-[Source Code](https://github.com/drigoalexander/Website-SUMUN) | [Reference](https://www.instagram.com/reel/CVQDhHWM2ST/)
+<Card link="https://github.com/drigoalexander/Website-SUMUN">Source Code </Card>
+
+<Card link="https://www.instagram.com/reel/CVQDhHWM2ST/">Reference </Card>
 
 > This Project Has Taken Down Due to Domain Expired
 
