add warning component in markdown

--- a/content/projects/1.blissful-beginnings.md
+++ b/content/projects/1.blissful-beginnings.md
@@ -7,7 +7,9 @@ description: "My final project for undergraduate"
 
 <Card link="https://github.com">Source Code </Card>
 
-> This Project Has Taken Down Due to Domain And Server Expired
+::Warning
+This Project Has Taken Down Due to Domain And Server Expired
+::
 
 In recent years, Indonesia has experienced an incredible surge in internet usage, connecting a staggering 77.02% of its population by 2022. This digital transformation has ushered in a multitude of opportunities and challenges for various industries, and the wedding business is no exception. As more couples turn to the web for their nuptial needs, wedding vendors find themselves grappling with a unique set of challenges.
 
