--- a/content/projects/2.c-loyal.md
+++ b/content/projects/2.c-loyal.md
@@ -9,7 +9,9 @@ description: "meta description of the page"
 
 <Card link="https://www.linkedin.com/posts/drigo-alexander-9a36a01a8_frontend-nuxt-vue-activity-6956797006224789504-Gql3?utm_source=share&utm_medium=member_desktop">Reference </Card>
 
-> This Project Has Taken Down Due to Domain Expired
+::Warning
+This Project Has Taken Down Due to Domain Expired
+::
 
 In the realm of technology and innovation, the Loyalty Points and Reward Redemption project emerged as the culmination of our journey at Alterra Academy. With a vision to empower users with the ability to redeem coupons and reap rewards, this project brought together a diverse team comprising Quality Assurance experts, Backend developers, Frontend engineers, UI/UX designers, and Mobile Developers. As we embarked on this venture, we encountered a unique set of challenges that tested our abilities to work asynchronously while staying firmly on track. In this article, we delve into the intricate details of this project, highlighting the role I played as the lead frontend engineer, the technologies we employed, and the core features we developed.
 
