--- a/content/projects/4.surabaya-mun.md
+++ b/content/projects/4.surabaya-mun.md
@@ -9,7 +9,9 @@ description: "My Very first app for event registration"
 
 <Card link="https://www.instagram.com/reel/CVQDhHWM2ST/">Reference </Card>
 
-> This Project Has Taken Down Due to Domain Expired
+::Warning
+This Project Has Taken Down Due to Domain Expired
+::
 
 ## A Vision Takes Shape
 
