chore: revamp web using nuxt/ui and gsap

--- a/content/projects/2.c-loyal.md
+++ b/content/projects/2.c-loyal.md
@@ -1,6 +1,6 @@
 ---
 title: "C Loyal Loyalty Point Agent"
-description: "meta description of the page"
+description: "Loyalty Point Agent App For Exchange User Point"
 ---
 
 # C Loyal - Loyalty Point Agent Web App
