fix: fix layout in blog section

--- a/content/projects/3.nuxt-insight.md
+++ b/content/projects/3.nuxt-insight.md
@@ -1,15 +1,11 @@
 ---
+Author: "Drigo Alexander"
 title: "Nuxt Course Project"
 description: "My Personal Project Making E-Learning App"
+sourceCode: "https://github.com/drigoalexander/nuxt-course-private"
+project: "https://nuxt-course.private.vercel.app/"
+opening: "Grind Everyday"
 ---
-
-# Nuxt Insight - Web App with Nuxt.js for E-Learning
-
-<Card link="https://github.com/drigoalexander/nuxt-course-private">Source Code </Card>
-
-<Card link="https://nuxt-course.private.vercel.app/">Live Demo </Card>
-
-## Demo
 
 <iframe width="100%" style="aspect-ratio: 16/9; padding-bottom: 40px"src="https://www.youtube.com/embed/21Lji7_nyGI?si=7KEM-2CglzOhqHOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
