--- a/content/projects/4.surabaya-mun.md
+++ b/content/projects/4.surabaya-mun.md
@@ -1,17 +1,14 @@
 ---
+Author: "Drigo Alexander"
 title: "Surabaya MUN"
-description: "My Very first app for event registration"
+description: "My Very First App For Event Registration"
+sourceCode: "https://github.com/Kyu-u/SUMUN-Web"
+project: "https://www.instagram.com/reel/CVQDhHWM2ST/"
+opening: "When My Journey Begin"
+projectStatus: "Domain Expired"
 ---
 
-# Surabaya MUN - My Very First Project
-
-<Card link="https://github.com/drigoalexander/Website-SUMUN">Source Code </Card>
-
-<Card link="https://www.instagram.com/reel/CVQDhHWM2ST/">Reference </Card>
-
-::Warning
-This Project Has Taken Down Due to Domain Expired
-::
+<!-- <AlertProse>This Project Has Taken Down Due To Domain Expired</AlertProse> -->
 
 ## A Vision Takes Shape
 
