--- a/content/projects/5.ptpp-ppid.md
+++ b/content/projects/5.ptpp-ppid.md
@@ -1,8 +1,10 @@
 ---
+Author: "Drigo Alexander"
 title: "PTPP PPID Website"
 description: "Website That I Worked On During Internship at Suitmedia"
+
+project: "https://ppid.ptpp.co.id/id"
+opening: "Starting At Digital Agency"
 ---
 
-# Test
-
-test
+### Im Still Writing This Section
